Setting up base project, two characters.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D2D2B0274A8A46D61C94DBA3FB9EC15E
-ProjectName=Third Person Game Template
+ProjectName=PuzzleGame
 
 [StartupActions]
 bAddPacks=True
