--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/Prototype2.Prototype2GameMode"
+GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_MainGameMode.BP_MainGameMode_C
+bOffsetPlayerGamepadIds=True
+TwoPlayerSplitscreenLayout=Vertical
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
@@ -18,4 +20,8 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.Bloom=False
 
