--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/Maps/MainMap.MainMap
+EditorStartupMap=/Game/Maps/MainMap.MainMap
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_MainGameMode.BP_MainGameMode_C
 bOffsetPlayerGamepadIds=True
 TwoPlayerSplitscreenLayout=Vertical
@@ -24,4 +24,3 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.Bloom=False
-
