--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -148,6 +148,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Throw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +ActionMappings=(ActionName="AimThrow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="AimThrow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
++ActionMappings=(ActionName="AutoCompleteLevel3",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
